--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
+firebase-debug.log
 
 # Editor directories and files
 .vscode/*
@@ -23,5 +24,6 @@ dist-ssr
 *.sln
 *.sw?
 .env
+.env.*
 .env.local
 .env.*.local
